tests/negative/gold/type3_test.gold
tests/negative/type3_test.toit:6:24: error: Unexpected token: :=
  field -> NonExisting := null
                       ^~
tests/negative/type3_test.toit:6:12: error: Unresolved type: 'NonExisting'
  field -> NonExisting := null
           ^~~~~~~~~~~
tests/negative/type3_test.toit:6:3: error: Method doesn't return a value
  field -> NonExisting := null
  ^~~~~
Compilation failed.
